--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       по
       стандартному тарифу. </h3>
 
-    <a href="/calculator_3600.html" type="js">Запуск калькулятора (или обновите страницу)</a>
+    <a href="/index.html" type="js">Запуск калькулятора (или обновите страницу)</a>
   </div>
   <script>
     'use strict'
