--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet" />
+  <link rel="stylesheet" href="calc/normalize.css" />
+  <link rel="stylesheet" href="calc/style.css" />
 
 </head>
 
