Изменена сумма проверки основного тарифа

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="main">
       <h1>Калькулятор акции "3600"</h1>
-      <p class="main-text">Калькулятор позволяет быстро раcсчитать на какой период хватит абоненту суммы оплаченной по
+      <p class="main-text">Калькулятор позволяет быстро рассчитать на какой период хватит абоненту суммы оплаченной по
         акции 3600. </p>
       <p class="main-text">В поля формы необходимо ввести актуальные суммы тарифов и текущий баланс абонента. Если
         какая-то услуга не предоставляется - оставить поле пустым или установить "0". </p>
@@ -85,7 +85,7 @@
         return a ? a : defVal
       }
 
-      if (tarif <= 0) {
+      if (tarif <= 0 || tarif > 400) {
         calcResult.innerHTML = '<p class="fail">Неправильные данные в поле "основная услуга"</p>';
         return
       }
